--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-bootstrap": "^2.0.3",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router": "^6.1.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "uuid": "^8.3.2",
