--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
-    "react-chartjs-2": "^4.0.0",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
@@ -23,7 +23,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
